updated minimum height to prevent overlapping when browser height is minimized and made basic text adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 }
 
 @layer base {
+	html {
+		@apply scroll-smooth;
+	}
+
 	::-webkit-scrollbar {
 		@apply w-[10px];
 	}
